--- a/screen.css
+++ b/screen.css
@@ -4,5 +4,10 @@ a.active {
 }
 
 body {
-    background: #aaa;
+    background: #fff;
+    font-family: Helvetica, sans-serif;
+}
+
+img {
+    width: 100%
 }
