--- a/screen.css
+++ b/screen.css
@@ -6,6 +6,8 @@ a.active {
 body {
     background: #fff;
     font-family: Helvetica, sans-serif;
+    border-top: 15px solid #424242;
+    margin: 0;
 }
 
 img {
